backend/.clippy-baseline.txt

     |
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    --> src/services/so/delivery.rs:1358:9
    --> src/services/voucher_service.rs:1216:9
    = note: requested on the command line with `-W unused-imports`
    = note: requested on the command line with `-W unused-variables`
    |
    |                                                ^^ expected `&str`, found integer
    |                                         +
    |                                         ^^^ expected `&str`, found integer
    |                                        +
    |                                        ^^^^ expected `&str`, found floating-point number
    |                                        ^^^^ expected `&str`, found integer
    |                                        ^^^^^^ expected `&str`, found floating-point number
    |                                      ^^^ expected `&str`, found integer
    |                                     ^^^ expected `&str`, found integer
    |                                    ^^ expected `&str`, found integer
    |                                    ^^^ expected `&str`, found integer
    |                                    ^^^^ expected `&str`, found integer
    |                                 ^^ expected `&str`, found integer
    |                               +
    |                               ^^ expected `&str`, found integer
    |                               ^^^ expected `&str`, found integer
    |                               ^^^^^^ expected `&str`, found floating-point number
    |                              +
    |                             ^ expected `&str`, found integer
    |                             ^^ expected `&str`, found integer
    |                             ^^^ expected `&str`, found integer
    |                     -----    ^^^^^^^^^^^^^
    |                     ------    ^^^^^^^^^^^^^^
    |                     ---------------    ^^^^^^^^^^^^^^^^^^^^^^^
    |                     ----------------    ^^^^^^^^^^^^^^^^^^^^^^^^
    |                     data moved here
    |                     move occurs because `billing_address` has type `std::string::String`, which does not implement the `Copy` trait
    |                     move occurs because `notes` has type `std::string::String`, which does not implement the `Copy` trait
    |                     move occurs because `shipping_address` has type `std::string::String`, which does not implement the `Copy` trait
    |                     move occurs because `status` has type `std::string::String`, which does not implement the `Copy` trait
    |                     |
    |         ------------------------------- arguments to this function are incorrect
    |         ^^^ help: if this is intentional, prefix it with an underscore: `_txn`
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   --> /rustc/e408947bfd200af42db322daf0fadfe7e26d3bd1/library/core/src/str/traits.rs:855:7
   --> src/services/accounting_period_service.rs:377:9
   --> src/services/ar/recon.rs:456:9
   --> src/services/ar/vfy.rs:782:9
   --> src/services/customer_credit_limit.rs:350:9
   --> src/services/inventory_adjustment_service.rs:687:9
   --> src/services/purchase_receipt_service.rs:685:9
   --> src/services/purchase_receipt_service.rs:702:37
   --> src/services/purchase_receipt_service.rs:703:31
   --> src/services/purchase_receipt_service.rs:704:29
   --> src/services/purchase_receipt_service.rs:705:33
   --> src/services/purchase_receipt_service.rs:708:36
   --> src/services/purchase_receipt_service.rs:970:41
   --> src/services/purchase_receipt_service.rs:971:48
   --> src/services/quotation_service.rs:619:9
   --> src/services/quotation_service.rs:631:29
   --> src/services/quotation_service.rs:632:31
   --> src/services/quotation_service.rs:633:40
   --> src/services/quotation_service.rs:654:29
   --> src/services/quotation_service.rs:655:29
   --> src/services/quotation_service.rs:766:36
   --> src/services/quotation_service.rs:767:38
   --> src/services/quotation_service.rs:768:40
   --> src/services/quotation_service.rs:782:36
   --> src/services/quotation_service.rs:784:40
   --> src/services/quotation_service.rs:800:29
   --> src/services/quotation_service.rs:801:31
   --> src/services/quotation_service.rs:802:40
   --> src/services/quotation_service.rs:808:36
   --> src/services/quotation_service.rs:825:29
   --> src/services/quotation_service.rs:826:31
   --> src/services/quotation_service.rs:827:40
   --> src/services/quotation_service.rs:834:36
   --> src/services/so/order_crud.rs:211:9
   --> src/services/so/order_crud.rs:585:31
   --> src/services/so/order_crud.rs:588:41
   --> src/services/so/order_crud.rs:591:40
   --> src/services/so/order_crud.rs:594:30
   --> src/services/so/order_workflow.rs:411:9
   ::: src/utils/unwrap_safe.rs:30:9
 30 |         rust_decimal::Decimal::from_str($x).expect("P9-1: 测试夹具 Decimal 字符串解析失败")
1216 |     use sea_orm::DatabaseConnection;
1358 |     use sea_orm::DatabaseConnection;
211 |         txn: &sea_orm::DatabaseTransaction,
350 |     use sea_orm::DatabaseConnection;
377 |     use sea_orm::DatabaseConnection;
411 |     use sea_orm::DatabaseConnection;
456 |     use sea_orm::DatabaseConnection;
585 |         if let Some(status) = &request.status {
585 |         if let Some(status) = request.status {
588 |         if let Some(shipping_address) = &request.shipping_address {
588 |         if let Some(shipping_address) = request.shipping_address {
591 |         if let Some(billing_address) = &request.billing_address {
591 |         if let Some(billing_address) = request.billing_address {
594 |         if let Some(notes) = &request.notes {
594 |         if let Some(notes) = request.notes {
619 |     use sea_orm::DatabaseConnection;
631 |             quantity: decs!(100),
632 |             unit_price: decs!(10),
633 |             unit_price_with_tax: decs!(11.3),
654 |             tax_rate: decs!(13),
655 |             moq: Some(decs!(50)),
685 |     use sea_orm::DatabaseConnection;
687 |     use sea_orm::DatabaseConnection;
702 |             gram_weight: Some(decs!(200)),
703 |             width: Some(decs!(150)),
704 |             quantity: decs!(100),
705 |             quantity_alt: decs!(50),
708 |             unit_price: Some(decs!(10)),
766 |         assert_eq!(subtotal, decs!(1000));
767 |         assert_eq!(tax_amount, decs!(130));
768 |         assert_eq!(total_amount, decs!(1130));
782 |         assert_eq!(subtotal, decs!(1000));
782 |     use sea_orm::DatabaseConnection;
784 |         assert_eq!(total_amount, decs!(1000));
800 |             quantity: decs!(200),
801 |             unit_price: decs!(20),
802 |             unit_price_with_tax: decs!(22.6),
808 |         assert_eq!(subtotal, decs!(5000)); // 1000 + 4000
825 |             quantity: decs!(3),
826 |             unit_price: decs!(33.333),
827 |             unit_price_with_tax: decs!(33.333),
834 |         assert_eq!(subtotal, decs!(100));
970 |         assert_eq!(item.quantity, decs!(100));
971 |         assert_eq!(item.unit_price, Some(decs!(10)));
error[E0308]: mismatched types
error[E0507]: cannot move out of `request.billing_address` as enum variant `Some` which is behind a shared reference
error[E0507]: cannot move out of `request.notes` as enum variant `Some` which is behind a shared reference
error[E0507]: cannot move out of `request.shipping_address` as enum variant `Some` which is behind a shared reference
error[E0507]: cannot move out of `request.status` as enum variant `Some` which is behind a shared reference
help: consider borrowing here
note: associated function defined here
warning: deref which would be done by auto-deref
warning: doc list item without indentation
warning: the following explicit lifetimes could be elided: 'a
warning: this function has too many arguments (8/7)
warning: this function has too many arguments (9/7)
warning: unused import: `sea_orm::DatabaseConnection`
warning: unused variable: `txn`
